# random_album

./: Cargo.toml  Procfile  rust-toolchain  rustfml.toml
src/: assets.rs  cache.rs  error.rs  main.rs  oauth.rs  oauth_token.rs  random_album.rs  types.rs
static/: album_gallery.js  random_album.css
templates/: empty.html.hbs  error.html.hbs  random_album.html.hbs
